--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 						<li>Created requirements traceability matrices which demonstrate test coverage of all features.</li>
 						<li>Methodologies: Scrum, Agile, BDD </li>
 						<li>Testing Tools: Selenium, Robot Framework, Web Driver, Postman, GitHub, Git, Keyword-driven, Docker, GCP, Bamboo</li>
-						li>Languages: Java, Python</li>
-						li>Defect Tracking Systems: JIRA, Confluence</li>
-						li>Mobile Networks: 3G, 4G, LTE, 5G</li>
+						<li>Languages: Java, Python</li>
+						<li>Defect Tracking Systems: JIRA, Confluence</li>
+						<li>Mobile Networks: 3G, 4G, LTE, 5G</li>
 					</ul>
 					
 				
